get the apikey from Giphy and

--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
     <main>
         <form action="">
             <label for="search">Search</label>
-            <input type="id" type="search" />
-            <button id="btnSearch">Go</button>
+            <input id="search" type="search" />
+            <button id="searchBtn">Go</button>
         </form>
-        <div class="out"></div>
+        <div class="display">
+            
+        </div>
     </main>
 </body>
 </html>
