added logo image in html

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <script src="script.js" defer></script>
     <main>
         <form action="">
-            <label for="search">Search</label>
-            <input id="search" type="search" />
-            <button id="searchBtn">Go</button>
+            <img src="./images/giphy_logo.png" alt="">
+             <div class="search">
+                <input id="search" type="search" />
+                <button id="searchBtn">Go</button>
+             </div>
+           
         </form>
         <div class="display">
             
