--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Giphy Api</title>
 </head>
+
 <body>
     <script src="script.js" defer></script>
     <main>
         <form action="">
             <img src="./images/giphy_logo.png" alt="">
-             <div class="search">
-                <input id="search" type="search" />
-                <button id="searchBtn">Go</button>
-             </div>
-           
+            <div class="search">
+                <input id="search-input" type="search"/>
+                <i class="fa-solid fa-magnifying-glass" id="searchBtn"></i>
+                </div>
         </form>
+
         <div class="display">
-            
+
         </div>
     </main>
 </body>
+
 </html>
