--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <i class="fa-solid fa-magnifying-glass" id="searchBtn"></i>
                 </div>
         </form>
-
+          <div class="loader"></div>
         <div class="display">
 
         </div>
